# msfs2040

./: .gitignore  README.md  cargo.toml
common/: Cargo.toml
common/src/: lib.rs
device/: Cargo.toml
device/src/: descriptor.rs  main.rs
host/: Cargo.toml  build.rs
host/src/: device.rs  main.rs
host/ui/: simconnect.slint
