[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
rusb = "*"
simconnect = "0.2.0"
slint = "1.2.2"

postcard = "1.0.8"
serde = { version = "1.0.189" }
common = { path = "../common" }

[build-dependencies]
slint-build = "1.2.2"
